--- a/Tutorial.ipynb
+++ b/Tutorial.ipynb
@@ -327,6 +327,26 @@
    "metadata": {},
    "source": [
     "## References\n",
+    "\n",
+    "Vaitkus, A., Merkys, A., Sander, T., Quirós, M., Thiessen, P. A., Bolton, E. E. & Gražulis, S. (2023). A workflow for deriving chemical entities from crystallographic data and its application to the Crystallography Open Database. Journal of Cheminformatics, 15(1). https://doi.org/10.1186/s13321-023-00780-2.\n",
+    "\n",
+    "Merkys, A.; Vaitkus, A.; Grybauskas, A.; Konovalovas, A.; Quirós, M. & Gražulis, S. \"Graph isomorphism-based algorithm for cross-checking chemical and crystallographic descriptions\". Journal of Cheminformatics, Springer Nature, 2023, 15.\n",
+    "\n",
+    "Vaitkus, A., Merkys, A. & Gražulis, S. (2021). Validation of the Crystallography Open Database using the Crystallographic Information Framework. Journal of Applied Crystallography, 54(2), 661-672. https://doi.org/10.1107/S1600576720016532\n",
+    "\n",
+    "Quirós, M.; Gražulis, S.; Girdzijauskaitė, S.; Merkys, A. & Vaitkus, A. \"Using SMILES strings for the description of chemical connectivity in the Crystallography Open Database\". Journal of Cheminformatics, Springer Nature, 2018, 10\n",
+    "\n",
+    "Merkys, A.; Vaitkus, A.; Butkus, J.; Okulič-Kazarinas, M.; Kairys, V. & Gražulis, S. (2016) \"COD::CIF::Parser: an error-correcting CIF parser for the Perl language\". Journal of Applied Crystallography, 49.\n",
+    "\n",
+    "Gražulis, S., Merkys, A., Vaitkus, A. & Okulič-Kazarinas, M. (2015) \"Computing stoichiometric molecular composition from crystal structures\". Journal of Applied Crystallography 48, 85-91.\n",
+    "\n",
+    "Gražulis, S., Daškevič, A., Merkys, A., Chateigner, D., Lutterotti, L., Quirós, M., Serebryanaya, N. R., Moeck, P., Downs, R. T. & LeBail, A. (2012) \"Crystallography Open Database (COD): an open-access collection of crystal structures and platform for world-wide collaboration\". Nucleic Acids Research 40, D420-D427.\n",
+    "\n",
+    "Grazulis, S., Chateigner, D., Downs, R. T., Yokochi, A.  T., Quiros, M., Lutterotti, L., Manakova, E., Butkus, J., Moeck, P. & Le Bail, A. (2009) \"Crystallography Open Database - an open-access collection of crystal structures\". J. Appl. Cryst. 42, 726-729.\n",
+    "\n",
+    "Downs, R. T. & Hall-Wallace, M. (2003) \"The American Mineralogist  Crystal Structure Database\". American Mineralogist 88, 247-250.\n",
+    "\n",
+    "Dan Porter, & Carmelo Prestipino. (2023). DanPorter/Dans_Diffraction: Version 3.0.0 (v3.0). Zenodo. https://doi.org/10.5281/zenodo.8106031\n",
     "\n"
    ]
   }
